# arcs

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile_api  Dockerfile_dashapp  Dockerfile_jobs  LICENSE  README.md  devenv.nix  package-lock.json  pyproject.toml  radixconfig.yaml  setup.py
.github/workflows/: test.yaml
api/: app.py  job_manager.py  models.py  simulation_runner.py
app/: arcs_app.py
app/data/: hse06_dft_data.json  scan_dft_data.json  test_hse06_small_graph.json
arcs/: _deprecated_functions.py  analysis.py  generate.py  model.py  reactions.py  setup_functions.py  traversal.py
arcs/dash_app/: server.py  server_2.py  server_3.py
arcs_molecules 2/dft_data/H2NCOONH4/relax/: scan.vasp
arcs_molecules 2/notebooks/: setup_reactions_and_graph.ipynb
examples/: example.ipynb  example1.ipynb  example_generate_backend_data.ipynb  example_pyvis_graph.html  example_run_arcs.ipynb  graph.html
examples/vib/: cache.0x-.json  cache.0z+.json  cache.0z-.json  cache.1x-.json  cache.1y+.json  cache.1y-.json  cache.2x+.json  cache.2x-.json  cache.2y+.json  cache.2y-.json  cache.2z+.json  cache.2z-.json  cache.eq.json
frontend/: .env.example  index.html  inject-env.js  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  configuration.ts  main.tsx
frontend/src/api/: ApiError.tsx  AuthConfig.tsx
frontend/src/components/: CenteredDiv.tsx
frontend/src/components/header/: Header.tsx  ProfileMenu.tsx
frontend/src/pages/: ErrorDialog.tsx  MainPage.tsx  SignInPage.tsx
frontend/src/pages/Help/: Help.md  HelpDialog.tsx  HelpPage.tsx
frontend/src/store/: AuthSlice.ts  ErrorHandlerMiddleware.tsx  ErrorSlice.ts  Hooks.ts  ProgressSlice.tsx  Store.tsx
frontend/src/store/Api/: ApiSlice.ts  BaseQueryWithReauth.tsx
frontend/src/utils/: appplicationInsights.ts  icons.tsx
notebooks/: arcs_sample.ipynb
src/: analysis.py
src/arcs/: analysis.py  generate.py  traversal.py
src/arcs/dash_app/: server.py  server_3.py  styling.py
src/arcs/dash_app/assets/: style.css
tests/: pandas_plot.py  parse_and_plot.py  results.txt  run_results_1.txt  run_results_1280_100.txt  run_results_2.txt  run_results_320_100.txt  run_results_3_10.txt  run_results_640_100.txt  simulation_data.csv  simulation_results.txt  test_analysis.py  test_balance.py  test_dft_data.json  test_endpoints.py  test_generate.py  test_model.py  test_old_arcs_results_deviation_with_sample_size.py  test_properties.py  test_results_deviation_with_sample_size.py  test_sample_length.py  test_setup_functions.py  test_snapshot.py
tests/model/: scipy_interpolation.ipynb  test_interpolation.py  test_model.py
tests/snapshots/: test_results_sample_length.txt
tests/snapshots/test_snapshot/test_function_random_walk/: random_walk.json
tests/snapshots/test_snapshot/test_function_sample/: sample.json
tests/snapshots/test_snapshot/test_snapshot/: snapshot.csv
tests/snapshots/test_snapshot/test_snapshot/Arcs_run_with_no_change_in_concentrations/: analysis.csv  concs.json
tests/snapshots/test_snapshot/test_snapshot/Normal_arcs_run/: concs.json
tests/unit_tests/: test_.py
tests/vaspdata/relax/: OUTCAR  POSCAR
tests/vaspdata/vibrations/: .vasprun.xml.swp  OUTCAR  POSCAR  vasprun.xml
