[build-system]
requires = ["setuptools>=64.0", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "arcs"
authors = [
    { name = "Benjamin A. D. Williamson" },
]
description = "automated reactions for CO2 storage"
readme = "README.md"
requires-python = ">=3.10"
license={"text"='MIT'}
version='1.4.0'
dependencies = [
        'ase==3.23.0',
        'pymatgen==2024.4.13', 
        'scipy==1.14.0', 
        'numpy==1.26.4',
        'chempy==0.9.0',
        'tqdm',
        'networkx==3.2.1',
        'pathos==0.3.1',
        'dash==2.17.1',
        'monty==2024.2.26',
        'dash_bootstrap_templates==1.1.1',
        'dash_bootstrap_components==1.5.0',
        'dash-loading-spinners==1.0.3',
        'dash-core-components==2.0.0',
        'loguru==0.7.2',
        'pywebview',
        'setproctitle',
        'fastapi',
        'uvicorn',
        'pydantic',
        ]

[project.urls]
repository = "https://github.com/equinor/arcs"

[project.optional-dependencies]
dev = ["black","pytest"]

[tool.setuptools]
packages=['arcs','app']

[tool.setuptools.package-data]
app=['./data/*']

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]