[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "arcs"
description="ARCS - Automated Reactions for CO2 Storage"
version = "1.5.0"
readme = "README.md"
license = { text = "BSD-3" }
authors = [{ name = "Benjamin A. D. Williamson", email = "benjamin.williamson@ntnu.no" }]
keywords = ["Chemistry", "Organic Chemistry", "Reactions","Materials Science"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.10"
dependencies = [
        'ase', #==3.23.0',
        'numpy',#==1.26.4',
        'chempy',#==0.9.0',
        'networkx',#==3.2.1',
        'scipy',
        'pymatgen',
        'tqdm',
        'pandas',
        'pyvis',
        'tqdm_pathos',
        'dash',#==3.0.0',
        'monty',#==2024.2.26',
        'dash_bootstrap_templates',#==1.2.4',
        'dash_bootstrap_components',#==1.6.0',
        #'dash-loading-spinners',#==1.0.3',
        'dash-core-components',#==2.0.0',
        'loguru',#==0.7.2',
        'pywebview',
        'setproctitle',
        'pytest'
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-cov>=3.0.0"]

[project.urls]
repository = "https://github.com/badw/arcs.git"
changelog = "https://github.com/badw/arcs/tree/main/CHANGELOG.md"

[tool.setuptools.package-data]
template = ["py.typed"]

[tool.pyright]
include = ["arcs"]
exclude = ["**/__pycache__"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-p no:warnings", "--import-mode=importlib"]
xfail_strict = true
log_cli_level = "warn"
pythonpath = "src"
testpaths = ["tests"]

skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
skip_gitignore = true

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "except ImportError",
]

src = ["src"]
lint.unfixable = [
  "T20",  # Removes print statements
  "F841", # Removes unused variables
]
lint.pydocstyle.convention = "numpy"
lint.isort.known-first-party = ["arcs"]
lint.isort.required-imports = ["from __future__ import annotations"]
lint.isort.split-on-trailing-comma=false
extend-include = ["*.ipynb"]

[tool.docformatter]
pre-summary-newline = true
black = true

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
no_implicit_optional = false
disable_error_code = "annotation-unchecked"
